--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "http://simonfredrich.github.io/brainweb",
   "dependencies": {
+    "json": "^9.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "^3.6.4"
   },
